@@ -3,6 +3,7 @@
 *  Copyright notice
 *
 *  (c) 2005-2011 René Fritz (r.fritz@colorcube.de)
+*  (c) 2005-2013 Stanislas Rolland <typo3(arobas)sjbr.ca>
 *  All rights reserved
 *
 *  This script is part of the Typo3 project. The Typo3 project is
@@ -21,100 +22,30 @@
 *
 *  This copyright notice MUST APPEAR in all copies of the script!
 ***************************************************************/
-require_once(t3lib_extMgm::extPath('static_info_tables').'class.tx_staticinfotables_encoding.php');
 /**
  * Class for updating the db
- *
- * @author	 René Fritz <r.fritz@colorcube.de>
  */
 class ext_update {
-
 	/**
 	 * Main function, returning the HTML content of the module
 	 *
 	 * @return	string		HTML
 	 */
 	function main()	{
-
 		$content = '';
+		$content.= '<p>Update the Static Info Tables with new language labels.</p>';
 
-		$content.= '<br />Update the Static Info Tables with new language labels.';
-		$content .= '<br />';
+		$extPath = t3lib_extMgm::extPath('static_info_tables_###LANG_ISO_LOWER###');
+		$fileContent = explode("\n", t3lib_div::getUrl($extPath.'ext_tables_static_update.sql'));
 
-		if (t3lib_div::_GP('import')) {
-
-			$destEncoding = t3lib_div::_GP('dest_encoding');
-
-			$extPath = t3lib_extMgm::extPath('static_info_tables_###LANG_ISO_LOWER###');
-			$fileContent = explode("\n", t3lib_div::getUrl($extPath.'ext_tables_static_update.sql'));
-
-			foreach($fileContent as $line)	{
-				if ($line=trim($line) AND preg_match('#^UPDATE#i', $line))	{
-
-					$query = $this->getUpdateEncoded ($line, $destEncoding);
-					$res = $GLOBALS['TYPO3_DB']->admin_query($query);
-
-				}
+		foreach ($fileContent as $line) {
+			$line = trim($line);
+			if ($line && preg_match('#^UPDATE#i', $line)) {
+				$res = $GLOBALS['TYPO3_DB']->admin_query($line);
 			}
-			$content .= '<br />';
-			$content .= '<p>Encoding: '.htmlspecialchars($destEncoding).'</p>';
-			$content .= '<p>Done.</p>';
-
-		} elseif (t3lib_extMgm::isLoaded('static_info_tables_###LANG_ISO_LOWER###')) {
-
-			$content .= '</form>';
-			$content .= '<form action="'.htmlspecialchars(t3lib_div::linkThisScript()).'" method="post">';
-			$content .= '<br />Destination character encoding:';
-            $content .= '<br />'.tx_staticinfotables_encoding::getEncodingSelect('dest_encoding', '', 'utf-8');
-			$content .= '<br />(The character encoding must match the encoding of the existing tables data. By default this is UTF-8.)';
-			$content .= '<br /><br />';
-			$content .= '<input type="submit" name="import" value="Import" />';
-			$content .= '</form>';
-
-		} else {
-
-			$content .= '<br /><strong>The extension needs to be installed first!</strong>';
 		}
-
+		$content .= '<p>Done.</p>';
 		return $content;
-	}
-
-	/**
-	 * Convert the values of a SQL update statement to a different encoding than UTF-8.
-	 *
-	 * @param string $query Update statement like: UPDATE static_countries SET cn_short_de='XXX' WHERE cn_iso_2='DE';
-	 * @param string $destEncoding Destination encoding
-	 * @return string Converted update statement
-	 */
-	function getUpdateEncoded ($query, $destEncoding) {
-		static $csconv;
-
-		if (!($destEncoding=='utf-8')) {
-			if(!is_object($csconv)) {
-				$csconv = t3lib_div::makeInstance('t3lib_cs');
-			}
-
-			$queryElements = explode('WHERE', $query);
-			$where = preg_replace('#;$#', '', trim($queryElements[1]));
-
-			$queryElements = explode('SET', $queryElements[0]);
-			$queryFields = $queryElements[1];
-
-			$queryElements = t3lib_div::trimExplode('UPDATE', $queryElements[0], 1);
-			$table = $queryElements[0];
-
-			$fields_values = array();
-			$queryFields = t3lib_div::trimExplode(',', $queryFields, 1);
-			foreach ($queryFields as $fieldsSet) {
-				$col = t3lib_div::trimExplode('=', $fieldsSet, 1);
-				$value = stripslashes(substr($col[1], 1, strlen($col[1])-2));
-			 	$value = $csconv->conv($value, 'utf-8', $destEncoding);
-			 	$fields_values[$col[0]] = $value;
-			}
-
-			$query = $GLOBALS['TYPO3_DB']->UPDATEquery($table,$where,$fields_values);
-		}
-		return $query;
 	}
 
 	function access() {
